feat(ui): add audit search
